--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
                     </a>
                 </div>
             </div>
-            <div class="glitter"></div>
+            <div class="holo-mask">
+                <div class="holo-pattern"></div>
+                <!-- <div class="holo-lines"></div>
+                <div class="card-shine"></div> -->
+            </div>
             <div class="reflection"></div>
             <div class="reflection_2"></div>
         </aside>
@@ -969,15 +973,23 @@
         });
 
         document.addEventListener("DOMContentLoaded", () => {
+            let lastMouseX = 50;
+            let lastMouseY = 50;
             const aside = document.querySelector("aside");
+            const reflection = aside.querySelector('.reflection');
+            const reflection_2 = aside.querySelector('.reflection_2');
+            const holoPattern = document.querySelector('.holo-pattern');
+
+            aside.addEventListener("mouseenter", (e) => {
+                reflection.style.opacity = 1;
+                reflection_2.style.opacity = 1;
+            });
 
             aside.addEventListener("mousemove", (e) => {
                 const { width, height, left, top } = aside.getBoundingClientRect();
+
                 const x = (e.clientX - left) / width * 100;
                 const y = (e.clientY - top) / height * 100;
-
-                aside.style.setProperty("--light-x", `${x}%`);
-                aside.style.setProperty("--light-y", `${y}%`);
 
                 const rotateX = ((e.clientY - top - height / 2) / 25) * -1;
                 const rotateY = (e.clientX - left - width / 2) / 25;
@@ -985,17 +997,83 @@
                 aside.style.setProperty("--rotateX", `${rotateX}deg`);
                 aside.style.setProperty("--rotateY", `${rotateY}deg`);
 
-                aside.style.setProperty("--pointer-from-center", pointFromCenter(x, y));
+                // Blend mouse position with rotation-based light position
+                const lightX = x * 0.8 + (50 + rotateY * 2) * 0.2;
+                const lightY = y * 0.8 + (50 + rotateX * 2) * 0.2;
+
+                // Ensure lightX and lightY stay within 0-100% range
+                const clampedLightX = Math.max(0, Math.min(100, lightX));
+                const clampedLightY = Math.max(0, Math.min(100, lightY));
+
+                aside.style.setProperty("--light-x", `${clampedLightX}%`);
+                aside.style.setProperty("--light-y", `${clampedLightY}%`);
+
+                lastMouseX = clampedLightX;
+                lastMouseY = clampedLightY;
+
+                updateHolographicEffects(rotateX, rotateY);
             });
 
+
             aside.addEventListener("mouseleave", () => {
-                aside.style.setProperty("--light-x", "50%");
-                aside.style.setProperty("--light-y", "50%");
+                aside.style.setProperty("transition", "transform 0.7s ease-in-out, --light-x 0.7s ease-in-out, --light-y 0.7s ease-in-out");
+
+                const currentRotateX = parseFloat(getComputedStyle(aside).getPropertyValue('--rotateX'));
+                const currentRotateY = parseFloat(getComputedStyle(aside).getPropertyValue('--rotateY'));
+
                 aside.style.setProperty("--rotateX", "0deg");
                 aside.style.setProperty("--rotateY", "0deg");
-                aside.style.setProperty("--pointer-from-center", "0");
+
+                // Start transition from last mouse position
+                aside.style.setProperty("--light-x", `${lastMouseX}%`);
+                aside.style.setProperty("--light-y", `${lastMouseY}%`);
+                const maxRotation = 25;
+                const reflectionOpacity = 1 - Math.sqrt(currentRotateX * currentRotateX + currentRotateY * currentRotateY) / maxRotation;
+                reflection.style.opacity = Math.max(0, Math.min(1, reflectionOpacity));
+                reflection_2.style.opacity = Math.max(0, Math.min(1, reflectionOpacity));
+
+                aside.style.setProperty("transition", "transform 0.2s ease-out");
+                resetCard();
             });
+            function updateHolographicEffects(rotateX, rotateY) {
+                const holoPattern = document.querySelector('.holo-pattern');
+                const holoLines = document.querySelector('.holo-lines');
+                const cardShine = document.querySelector('.card-shine');
+                // Normalize rotation to values between 0 and 1
+                const normRotateX = (rotateX + 15) / 30;
+                const normRotateY = (rotateY + 15) / 30;
+
+                // Calculate the rotation angle magnitude (distance from center)
+                const magnitude = Math.sqrt(normRotateX * normRotateX + normRotateY * normRotateY);
+
+                // Update the light reflection on the holographic elements
+                // Only changing opacity/color/brightness, not position
+                holoPattern.style.opacity = 0.5;
+                // holoLines.style.opacity = magnitude * 0.5;
+                // cardShine.style.opacity = magnitude * 0.6;
+
+                // Update the color hue based on viewing angle
+                const hue = ((normRotateX + normRotateY) * 180) % 360;
+                holoPattern.style.filter = `hue-rotate(${hue}deg)`;
+
+                // Create a light source effect that moves with the card tilt
+                const angle = Math.atan2(normRotateY, normRotateX) * (180 / Math.PI);
+                //         cardShine.style.background = `linear-gradient(
+                //     ${angle + 135}deg,
+                //     rgba(255, 255, 255, 0) 0%,
+                //     rgba(255, 255, 255, 0.2) 50%,
+                //     rgba(255, 255, 255, 0) 100%
+                //   )`;
+            }
+
+            function resetCard() {
+
+                holoPattern.style.opacity = 0;
+                reflection.style.opacity = 0;
+                reflection_2.style.opacity = 0;
+            }
         });
+
     </script>
 </body>
 
