Boosted SEO meta tags

--- a/index.html
+++ b/index.html
@@ -2,32 +2,74 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Rafael Comunhão Ferreira - Resumo acadêmico e profissional</title>
-    <meta name="description" content="Resumo acadêmico e profissional de Rafael Comunhão Ferreira, especialista em
-    desenvolvimento .NET e arquitetura de software.">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rafael Comunhão Ferreira | Engenheiro de Software .NET e Full Stack</title>
+    <meta name="description"
+        content="Portfólio profissional de Rafael Comunhão Ferreira — Engenheiro de Software especializado em desenvolvimento .NET, C#, arquitetura de software e aplicações web Full Stack." />
     <meta name="keywords"
-        content="Programador, Desenvolvedor de software, Especialista .NET, C#, Engenheiro de Software, Senior, Desenvolvedor Full Stack, Software Developer, Full-Stack Developer, Web Development, Frontend, Backend, JavaScript">
-    <meta name="author" content="Rafael Comunhão Ferreira">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="favicon.png">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+        content="Rafael Comunhão Ferreira, Desenvolvedor .NET, Engenheiro de Software, Programador C#, Full Stack Developer, Software Architecture, Backend, Frontend, JavaScript, Web Development" />
+    <meta name="author" content="Rafael Comunhão Ferreira" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://rafaelchampion.github.io/InteractiveCV/" />
+
+    <!-- Open Graph (Facebook, LinkedIn) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Rafael Comunhão Ferreira | Engenheiro de Software .NET e Full Stack" />
+    <meta property="og:description"
+        content="Especialista em desenvolvimento .NET e arquitetura de software com experiência em aplicações web modernas." />
+    <meta property="og:url" content="https://rafaelchampion.github.io/InteractiveCV/" />
+    <meta property="og:image" content="https://i.postimg.cc/1tx2GYVk/photo.jpg" />
+    <meta property="og:site_name" content="Rafael Comunhão Ferreira - Portfólio" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Rafael Comunhão Ferreira | Engenheiro de Software .NET e Full Stack" />
+    <meta name="twitter:description"
+        content="Desenvolvedor Full Stack especialista em .NET, C#, JavaScript e arquitetura de software." />
+    <meta name="twitter:image" content="https://i.postimg.cc/1tx2GYVk/photo.jpg" />
+
+    <!-- Favicons -->
+    <link rel="icon" href="/favicon.png" type="image/png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png">
+
+    <!-- Fonts & Icons Performance Optimized -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-    <link href="https://www.nerdfonts.com/assets/css/webfont.css" rel="stylesheet" type="text/css">
-    <script src="https://kit.fontawesome.com/e2ea3b63b3.js" crossorigin="anonymous"></script>
+    <link href="https://www.nerdfonts.com/assets/css/webfont.css" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/e2ea3b63b3.js" crossorigin="anonymous" async></script>
+
+    <!-- Styles -->
     <link rel="stylesheet" href="static/css/main.css" />
-    <!-- Google tag (gtag.js) -->
+
+    <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EEXN3H3SBP"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-
         gtag('config', 'G-EEXN3H3SBP');
     </script>
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Rafael Comunhão Ferreira",
+    "url": "https://rafaelchampion.github.io/InteractiveCV/",
+    "image": "https://i.postimg.cc/1tx2GYVk/photo.jpg",
+    "jobTitle": "Engenheiro de Software Full Stack",
+    "sameAs": [
+      "https://www.linkedin.com/in/rafael-ferreira93/",
+      "https://github.com/rafaelchampion"
+    ]
+  }
+  </script>
 </head>
 
 <body>
