Updated open graph image cover

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Especialista em desenvolvimento .NET e arquitetura de software com experiência em aplicações web modernas." />
     <meta property="og:url" content="https://rafaelchampion.github.io/InteractiveCV/" />
-    <meta property="og:image" content="https://i.postimg.cc/1tx2GYVk/photo.jpg" />
+    <meta property="og:image" content="https://i.postimg.cc/ZRM9sp4z/og-cover.jpg" />
     <meta property="og:site_name" content="Rafael Comunhão Ferreira - Portfólio" />
 
     <!-- Twitter Card -->
@@ -27,7 +27,7 @@
     <meta name="twitter:title" content="Rafael Comunhão Ferreira | Engenheiro de Software .NET e Full Stack" />
     <meta name="twitter:description"
         content="Desenvolvedor Full Stack especialista em .NET, C#, JavaScript e arquitetura de software." />
-    <meta name="twitter:image" content="https://i.postimg.cc/1tx2GYVk/photo.jpg" />
+    <meta name="twitter:image" content="https://i.postimg.cc/ZRM9sp4z/og-cover.jpg" />
 
     <!-- Favicons -->
     <link rel="icon" href="/favicon.png" type="image/png" />
@@ -62,7 +62,7 @@
     "@type": "Person",
     "name": "Rafael Comunhão Ferreira",
     "url": "https://rafaelchampion.github.io/InteractiveCV/",
-    "image": "https://i.postimg.cc/1tx2GYVk/photo.jpg",
+    "image": "https://i.postimg.cc/ZRM9sp4z/og-cover.jpg",
     "jobTitle": "Engenheiro de Software Full Stack",
     "sameAs": [
       "https://www.linkedin.com/in/rafael-ferreira93/",
