--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <meta name="twitter:image" content="https://i.postimg.cc/ZRM9sp4z/og-cover.jpg" />
 
     <!-- Favicons -->
-    <link rel="icon" href="/favicon.png" type="image/png" />
+    <link rel="icon" href="favicon.png" type="image/png" />
+    <link rel="icon" href="favicon.png" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png">
 
     <!-- Fonts & Icons Performance Optimized -->
